--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Shikoku travel site" />
     <title>Shikoku Travel</title>
+    <link rel="icon" href="./favicon.ico" />
   </head>
   <body>
     <div id="root"></div>
